feat: added switch

--- a/01-Fundamentals-Part-1/index.html
+++ b/01-Fundamentals-Part-1/index.html
@@ -31,6 +31,7 @@
 
 
     <!-- <script src="./script.js"></script> -->
-    <script src="./string.js"></script>
+    <!-- <script src="./string.js"></script> -->
+    <script src="./switch.js"></script>
   </body>
 </html>
