--- a/01-Fundamentals-Part-1/index.html
+++ b/01-Fundamentals-Part-1/index.html
@@ -32,6 +32,7 @@
 
     <!-- <script src="./script.js"></script> -->
     <!-- <script src="./string.js"></script> -->
-    <script src="./switch.js"></script>
+    <!-- <script src="./switch.js"></script> -->
+    <script src="./cond.js"></script>
   </body>
 </html>
