--- a/02-Fundamentals-Part-2/index.html
+++ b/02-Fundamentals-Part-2/index.html
@@ -25,6 +25,8 @@
   </head>
   <body>
     <h1>JavaScript Fundamentals – Part 2</h1>
-    <script src="script.js"></script>
+    <!-- <script src="script.js"></script> -->
+    <!-- <script src="arrays.js"></script> -->
+    <script src="./obj.js"></script>
   </body>
 </html>
