done with JS Basics

--- a/modern-javascript-starter-files-main/01.Javascript-Basics/07.Data types_ Boolean, null & undefined/index.html
+++ b/modern-javascript-starter-files-main/01.Javascript-Basics/07.Data types_ Boolean, null & undefined/index.html
@@ -12,7 +12,12 @@
 
   <h1 id="title">Data types: Boolean, null & undefined</h1>
   <script>
-
+    let playerName = "Chris";
+    let gameStarted = false
+    if(playerName){
+      console.log('username is set');
+    }
+    // console.log(typeof gameStart)
   </script>
 </body>
 
