--- a/modern-javascript-starter-files-main/01.Javascript-Basics/09.Operators_ Assignment and comparison/index.html
+++ b/modern-javascript-starter-files-main/01.Javascript-Basics/09.Operators_ Assignment and comparison/index.html
@@ -1,26 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-		<meta charset="UTF-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<meta http-equiv="X-UA-Compatible" content="ie=edge" />
-		<title>Operators</title>
-	</head>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <title>Operators</title>
+  </head>
 
-	<body>
-		<h1 id="title">Operators: Assignment & comparison</h1>
-		<script>
-			// ASSIGNMENT OPERATORS
-			// =, +=, -+, *=, /=, %=
-			const forename = "Homer";
-			const surname = "Simpson";
-			let number1 = 15;
-			let number2 = 5;
+  <body>
+    <h1 id="title">Operators: Assignment & comparison</h1>
+    <script>
+      // ASSIGNMENT OPERATORS
+      // =, +=, -+, *=, /=, %=
+      const forename = "Homer";
+      const surname = "Simpson";
+      let number1 = 15;
+      let number2 = 5;
 
-			// document.getElementById('title').innerText =
+      //   let newNumber = number1 + number2;
+      number1 += number;
 
-			// COMPARISON OPERATORS
-			// ==, !=, ===, !==, >, >=, <, <=
-		</script>
-	</body>
+      document.getElementById("number1").innerHTML = number1;
+      //   document.getElementById("title").innerText = forename;
+      //   document.getElementById("title").innerText = surname;
+      // COMPARISON OPERATORS
+      // ==, !=, ===, !==, >, >=, <, <=
+    </script>
+  </body>
 </html>
