--- a/modern-javascript-starter-files-main/01.Javascript-Basics/06.Data types_ Numbers/index.html
+++ b/modern-javascript-starter-files-main/01.Javascript-Basics/06.Data types_ Numbers/index.html
@@ -13,9 +13,9 @@
   <h1 id="title">Data types: Numbers</h1>
   <script>
     let number = 'five';
-    number = 5;
+    number = 5 + 10;
 
-    document.getElementById('title').innerText = number
+    document.getElementById('title').innerText = number   ;
   </script>
 </body>
 
