--- a/modern-javascript-starter-files-main/01.Javascript-Basics/08.Comments, semicolons and ASI/index.html
+++ b/modern-javascript-starter-files-main/01.Javascript-Basics/08.Comments, semicolons and ASI/index.html
@@ -1,19 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <title>Comments, semicolons and ASI</title>
+  </head>
 
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Comments, semicolons and ASI</title>
-</head>
-
-<body>
-
-  <h1 id="title">Comments, semicolons and ASI</h1>
-  <script>
-
-  </script>
-</body>
-
+  <body>
+    <h1 id="title">Comments, semicolons and ASI</h1>
+    <script>
+      const name = "Chris";
+      const learningJavaScript = true;
+      let score = 97.34;
+      const damage = 10.42;
+      // must have colon in above statement
+      /* control the length of number using toPrecision */
+      console.log((score - damage).toPrecision(2););
+    </script>
+  </body>
 </html>
