--- a/modern-javascript-starter-files-main/02.Arrays-In-More-Depth/01.The-array-constructor/index.html
+++ b/modern-javascript-starter-files-main/02.Arrays-In-More-Depth/01.The-array-constructor/index.html
@@ -11,7 +11,10 @@
     <h1 id="title">The Array Constructor</h1>
     <script>
       // Array Literal
-      let pizza = ['dough', 'pepperoni', 'cheese', 'sauce'];
+      let pizza = ["dough", "pepperoni", "cheese", "sauce"];
+      const ingredients = new Array(5);
+      ingredients.splice(2, 1);
+      console.log(ingredients);
     </script>
   </body>
 </html>
