--- a/modern-javascript-starter-files-main/02.Arrays-In-More-Depth/02.Properties-methods-prototype/index.html
+++ b/modern-javascript-starter-files-main/02.Arrays-In-More-Depth/02.Properties-methods-prototype/index.html
@@ -10,16 +10,22 @@
   <body>
     <h1 id="title">Properties, Methods & The Prototype</h1>
     <script>
-      let margherita = ['dough', 'sauce', 'cheese'];
+      let margherita = ["dough", "sauce", "cheese"];
       let vegetarian = [
-        'dough',
-        'sauce',
-        'cheese',
-        'peppers',
-        'onions',
-        'jalapenos',
+        "dough",
+        "sauce",
+        "cheese",
+        "peppers",
+        "onions",
+        "jalapenos",
       ];
-      let pepperoni = ['dough', 'sauce', 'cheese', 'pepperoni'];
+      let pepperoni = ["dough", "sauce", "cheese", "pepperoni"];
+      // properties
+      margherita.length;
+
+      // methods - push(), slice(),
+      console.log(Array.prototype);
+      console.log(vegetarian);
     </script>
   </body>
 </html>
