--- a/modern-javascript-starter-files-main/02.Arrays-In-More-Depth/10.Two-dimensional-arrays/index.html
+++ b/modern-javascript-starter-files-main/02.Arrays-In-More-Depth/10.Two-dimensional-arrays/index.html
@@ -9,6 +9,16 @@
 
   <body>
     <h1 id="title">Two Dimensional Arrays</h1>
-    <script></script>
+    <script>
+      let grid = [
+        [1, 2, 3],
+        [4, 5, 6],
+        [7, 8, 9],
+        [0, 0, 0]
+      ]
+
+      // console.table(grid);
+      console.log(grid);
+    </script>
   </body>
 </html>
