--- a/modern-javascript-starter-files-main/03.Functions/05.A-function-or-a-method/index.html
+++ b/modern-javascript-starter-files-main/03.Functions/05.A-function-or-a-method/index.html
@@ -10,8 +10,8 @@
   <body>
     <h1 id="title">A Function Or a Method</h1>
     <script>
-      let bread = ['flour', 'yeast', 'salt', 'water'];
-      let brownies = ['butter', 'chocolate', 'flour', 'eggs', 'sugar'];
+      let bread = ["flour", "yeast", "salt", "water"];
+      let brownies = ["butter", "chocolate", "flour", "eggs", "sugar"];
       // functions
       function checkAllergies(recipe, ingredient) {
         const hasIngredient = recipe.includes(ingredient);
