--- a/modern-javascript-starter-files-main/03.Functions/01.The-global-object-built-in-functions/index.html
+++ b/modern-javascript-starter-files-main/03.Functions/01.The-global-object-built-in-functions/index.html
@@ -10,13 +10,18 @@
   <body>
     <h1 id="title">The Global Object & Built In Functions</h1>
     <script>
-      let bread = ['flour', 'yeast', 'salt', 'water'];
-      let brownies = ['butter', 'chocolate', 'flour', 'eggs', 'sugar'];
+      let bread = ["flour", "yeast", "salt", "water"];
+      let brownies = ["butter", "chocolate", "flour", "eggs", "sugar"];
 
       function checkAllergies(recipe, ingredient) {
         const hasIngredient = recipe.includes(ingredient);
         return hasIngredient;
       }
+      // console.log(checkAllergies(bread, "salt"));
+      const int = parseInt("10");
+      console.log(typeof int);
     </script>
+
+    <script src="./script.js"></script>
   </body>
 </html>
