--- a/modern-javascript-starter-files-main/04.Events-And-The-DOM/05.Adding-elements-to-the-page/index.html
+++ b/modern-javascript-starter-files-main/04.Events-And-The-DOM/05.Adding-elements-to-the-page/index.html
@@ -88,7 +88,7 @@
     </header>
     <img src="burger.jpg" />
 
-    <section>
+    <!-- <section>
       <h3>Helping the planet, one bite at a time...</h3>
       <div class="content">
         <div class="image_section">
@@ -102,7 +102,7 @@
           <button>BUY ONLINE</button>
         </div>
       </div>
-    </section>
+    </section> -->
 
     <script>
       // ========= SECTION HEADING =========
@@ -153,6 +153,8 @@
       textDivElement.setAttribute('class', 'info_section');
 
       // ADD TO PAGE
+
+      document.body.append(sectionWrapper)
     </script>
   </body>
 </html>
